==> Microchip-MPLAB-Harmony/usb_apps_host/apps/hid_basic_mouse_usart/firmware/src/config/pic32cz_ca80_curiosity_ultra/initialization.c <==
#include "configuration.h"
#include "definitions.h"
#include "device.h"

void SYS_Initialize ( void* data )
{
    /* MISRAC 2012 deviation block start */
    /* MISRA C-2012 Rule 2.2 deviated in this file.  Deviation record ID -  H3_MISRAC_2012_R_2_2_DR_1 */

  
    PORT_Initialize();

    CLOCK_Initialize();




    SERCOM1_USART_Initialize();

    EVSYS_Initialize();

    RTC_Initialize();

	BSP_Initialize();

    sysObj.drvUsart0 = DRV_USART_Initialize(DRV_USART_INDEX_0, (SYS_MODULE_INIT *)&drvUsart0InitData);


    sysObj.sysTime = SYS_TIME_Initialize(SYS_TIME_INDEX_0, (SYS_MODULE_INIT *)&sysTimeInitData);

    /* Initialize the USB Host layer */
    sysObj.usbHostObject0 = USB_HOST_Initialize (( SYS_MODULE_INIT *)& usbHostInitData );	

    /* Initialize USB Driver */ 
    sysObj.drvUSBHSObject0 = DRV_USBHS_Initialize(DRV_USBHS_INDEX_0, (SYS_MODULE_INIT *) &drvUSBHSInit0);	


    APP_Initialize();


    NVIC_Initialize();

    /* MISRAC 2012 deviation block end */
}
